--- a/packages/localdeck-codegen/esphome-localdeck.yaml
+++ b/packages/localdeck-codegen/esphome-localdeck.yaml
@@ -339,6 +339,7 @@ binary_sensor:
     id: keypad_button_10
     name: Button 10
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: J
     on_press:
@@ -375,6 +376,7 @@ binary_sensor:
     id: keypad_button_11
     name: Button 11
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: K
     on_press:
@@ -411,6 +413,7 @@ binary_sensor:
     id: keypad_button_12
     name: Button 12
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: L
     on_press:
@@ -447,6 +450,7 @@ binary_sensor:
     id: keypad_button_13
     name: Button 13
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: M
     on_press:
@@ -483,6 +487,7 @@ binary_sensor:
     id: keypad_button_14
     name: Button 14
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: 'N'
     on_press:
@@ -519,6 +524,7 @@ binary_sensor:
     id: keypad_button_15
     name: Button 15
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: O
     on_press:
@@ -555,6 +561,7 @@ binary_sensor:
     id: keypad_button_16
     name: Button 16
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: P
     on_press:
@@ -591,6 +598,7 @@ binary_sensor:
     id: keypad_button_17
     name: Button 17
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: Q
     on_press:
@@ -627,6 +635,7 @@ binary_sensor:
     id: keypad_button_18
     name: Button 18
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: R
     on_press:
@@ -663,6 +672,7 @@ binary_sensor:
     id: keypad_button_19
     name: Button 19
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: S
     on_press:
@@ -699,6 +709,7 @@ binary_sensor:
     id: keypad_button_02
     name: Button 02
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: B
     on_press:
@@ -735,6 +746,7 @@ binary_sensor:
     id: keypad_button_20
     name: Button 20
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: T
     on_press:
@@ -771,6 +783,7 @@ binary_sensor:
     id: keypad_button_21
     name: Button 21
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: U
     on_press:
@@ -807,6 +820,7 @@ binary_sensor:
     id: keypad_button_22
     name: Button 22
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: V
     on_press:
@@ -843,6 +857,7 @@ binary_sensor:
     id: keypad_button_23
     name: Button 23
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: W
     on_press:
@@ -879,6 +894,7 @@ binary_sensor:
     id: keypad_button_24
     name: Button 24
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: X
     on_press:
@@ -915,6 +931,7 @@ binary_sensor:
     id: keypad_button_03
     name: Button 03
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: C
     on_press:
@@ -951,6 +968,7 @@ binary_sensor:
     id: keypad_button_04
     name: Button 04
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: D
     on_press:
@@ -987,6 +1005,7 @@ binary_sensor:
     id: keypad_button_05
     name: Button 05
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: E
     on_press:
@@ -1023,6 +1042,7 @@ binary_sensor:
     id: keypad_button_06
     name: Button 06
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: F
     on_press:
@@ -1059,6 +1079,7 @@ binary_sensor:
     id: keypad_button_07
     name: Button 07
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: G
     on_press:
@@ -1095,6 +1116,7 @@ binary_sensor:
     id: keypad_button_08
     name: Button 08
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: H
     on_press:
@@ -1131,6 +1153,7 @@ binary_sensor:
     id: keypad_button_09
     name: Button 09
     internal: false
+    publish_initial_state: true
     keypad_id: keypad
     key: I
     on_press:
