--- a/packages/localdeck-codegen/esphome-localdeck.yaml
+++ b/packages/localdeck-codegen/esphome-localdeck.yaml
@@ -25,6 +25,10 @@ esphome:
     - delay: 5s
     - light.turn_off:
         id: ledstrip
+    - delay: 1s
+    - lambda: id(keypad_button_01).publish_state(false);
+    - lambda: id(keypad_button_02).publish_state(false);
+    
   project:
     name: localbytes.localdeck
     version: 0.0.1
